minor thing fixed
